<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/searchicon"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />


    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/bookingicon"
        android:title="@string/title_booking" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profileicon"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/moreicon"
        android:title="@string/title_more" />

</menu>
