<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_splash"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_weight="0.3"
        android:src="@drawable/ic_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:drawableStart="@drawable/ic_usernameicon"
            android:drawablePadding="40dp"
            android:hint="@string/user_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/emailicon"
            android:drawablePadding="40dp"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mobileicon"
            android:drawablePadding="40dp"
            android:hint="@string/phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_passwordicon"
            android:drawablePadding="40dp"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_passwordicon"
            android:drawablePadding="40dp"
            android:hint="@string/con_password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/addressicon"
            android:drawablePadding="40dp"
            android:hint="@string/address"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/cityicon1"
            android:drawablePadding="40dp"
            android:hint="@string/city"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/black" />


        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_sign_up"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_rectangle_rounded"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/sign_in"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>