<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_weight="0.3"
        android:src="@drawable/newnewlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">


        <com.octalabs.challetapp.custome.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/please_login_to_continue"
            android:textSize="24sp" />


        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_in"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:background="@drawable/ic_rectangle_rounded"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>