<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4D4D4">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            card_view:cardElevation="5dp"
            android:elevation="5dp"

            android:layout_height="match_parent"
            card_view:cardCornerRadius="4dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="15dp"
                android:orientation="vertical">







                <TextView
                    android:id="@+id/text_wish_list"
                    android:layout_height="match_parent"
                    android:text="@string/wishlist"
                    android:drawableStart="@drawable/wishlisticon"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>





                <TextView
                    android:id="@+id/text_change_password"
                    android:layout_height="match_parent"
                    android:text="@string/change_password"
                    android:drawableStart="@drawable/changepasswordicon"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>




                <TextView
                    android:id="@+id/text_contact_us"
                    android:layout_height="match_parent"
                    android:text="@string/contact_us"
                    android:drawableStart="@drawable/contactusicon"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>


                <TextView
                    android:id="@+id/text_privacy_policy"
                    android:layout_height="match_parent"
                    android:text="@string/privacy_policy"
                    android:drawableStart="@drawable/privacypolicy"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>




                <TextView

                    android:id="@+id/text_terms_conditions"
                    android:layout_height="match_parent"
                    android:text="@string/terms_amp_conditions"
                    android:drawableStart="@drawable/termsconditionicon"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>




                <TextView

                    android:id="@+id/text_change_language"
                    android:layout_height="match_parent"
                    android:text="@string/select_language"
                    android:drawableStart="@drawable/termsconditionicon"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>



                <TextView
                    android:id="@+id/text_logout"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/logouticon"
                    android:text="@string/logout"
                    android:drawablePadding="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="30dp"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_width="match_parent"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:background="#000"></View>




            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>




</ScrollView>