<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ChangePasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D4D4D4">


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:elevation="5dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"

                android:padding="15dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/edt_new_password"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/edt_con_password"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <Button
                android:id="@+id/btn_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_btn_new"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/update"
                android:textColor="@color/white" />


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>